[package]
name = "parsley"
version = "1.1.0"
authors = ["Jonas Maier <1.jmaier.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.3"

[dependencies]
structopt = { version = "0.3", default-features = false }
console = { version = "0.14", default-features = false }
lazy_static = "1.4"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.

